Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.
Admin message
The migration is almost done, at least the rest should happen in the background. There are still a few technical difference between the old cluster and the new ones, and they are summarized in this issue. Please pay attention to the TL:DR at the end of the comment.
"README.md" did not exist on "3f749befb0998472470d850b11b430477c0718cc"
Regression amdgpu - Plymouth graphics freezes on Framework 16 laptop and panel replay enablement (kernel 6.11.2 > 6.11.3)
After kernel upgrade 6.11.2 > 6.11.3 on a Framework 16 laptop with Arch Linux, the Plymouth 'scroller icon/graphics' freezes on boot and the passphrase input field is not visible.
Blindly entering the passphrase makes the laptop continue booting after which it seems to operate as usual.
After analysis in issue #3344 (closed) the following observations have been noticed.
Rollback of kernel 6.11.3 > 6.11.2 makes Plymouth work again.
Suspected cause is the enablement of AMD panel replay in kernel 6.11.3.
Applying the 3 panel replay patches on top of 6.11.2 makes Plymouth freeze again.
Designs
Child items
...
Show closed items
Linked items
0
Link issues together to show that they're related.
Learn more.
I too am experiencing this bug, and spent today bisecting the issue to the same commit Mario linked to, commit 70cc361f98a7b7f29cff2366c1ba75ac437cf94f.
I too experience issues with plymouth, but I also experience similar issues with any app, in this case games, that run full screen under GNOME shell using Xorg. I have verified that the screen is not updated when running Minecraft, and Mame, although the screen is updated when I move the mouse pointer in Minecraft when navigating menus, or in game.
Testing was done with kernel versions 6.11.3 through 6.11.6. I have also built 6.11.6 with the above commit reverted, and everything works correctly.
I'm still having this issue (or at least one very closely related) on Fedora 41 & KDE Plasma using the latest rawhide kernel (6.13.0-rc2), despite that being well past where the fix was committed. Strangely though, if I compile myself I don't have the issue. Both versions have the fix committed so I have no idea why the issue is still happening - not going to reopen because of that but hoping I can get some guidance on what could still be causing the issue and where to look for debugging? Issue has been bothering me and some other FW16 users for a while now so I'd like to get it fixed. (Note - seems arch may have the issue too, not just fedora, according to others)
My panel freezes when playing full screen videos, at least on Arch kernels 6.12.1 and 6.12.2. The video continues when I move the mouse pointer.
I suspect panel replay, and since I got tired of the panel replay issues, I have decided to disable it by kernel parameter "amdgpu.dcdebugmask=0x400". I will probably leave this for a while and retry each major kernel release (6.13, 6.14, etc) and hope for the best. :-)
The Plymouth problems started when the AMD panel replay got activated again due to a kernel upgrade.
I have worked around the problem by uninstalling the plymouth-git package and installing the plymouth non-git package.
I am a bit tired of the panel replay issues, so I have decided to disable the functionality. Either for the issues of booting, watching videos or other replay issues.