drm/amd/display: Fix Panel Replay not update screen correctly

[ Upstream commit bd8a9576617439bdc907c9ce0875909aea4221cb ]

[Why]
In certain use case such as KDE login screen, there will be no atomic
commit while do the frame update.
If the Panel Replay enabled, it will cause the screen not updated and
looks like system hang.

[How]
Delay few atomic commits before enabled the Panel Replay just like PSR.

Fixes: be64336307a6c ("drm/amd/display: Re-enable panel replay feature")
Closes: https://gitlab.freedesktop.org/drm/amd/-/issues/3686
Closes: https://gitlab.freedesktop.org/drm/amd/-/issues/3682
Tested-By: Corey Hickey <bugfood-c@fatooh.org>
Tested-By: James Courtier-Dutton <james.dutton@gmail.com>
Reviewed-by: Leo Li <sunpeng.li@amd.com>
Signed-off-by: Tom Chung <chiahsuan.chung@amd.com>
Signed-off-by: Hamza Mahfooz <hamza.mahfooz@amd.com>
Signed-off-by: Alex Deucher <alexander.deucher@amd.com>
(cherry picked from commit ca628f0eddd73adfccfcc06b2a55d915bca4a342)
Cc: stable@vger.kernel.org # 6.11+

[ Backport note: this tree does not carry commit 5950efe25ee02
  ("drm/amd/display: Enable Panel Replay for static screen use case"),
  so amdgpu_dm_crtc_set_panel_sr_feature() does not exist here. In
  amdgpu_dm_crtc.c, kept the pre-existing inline PSR enable/disable
  logic instead of switching to that helper, and only applied this
  commit's vblank_work->acrtc NULL-guard on the surrounding if.

  In amdgpu_dm.c, the new amdgpu_dm_enable_self_refresh() helper
  applied cleanly, but this tree is also missing the connector field
  amdgpu_dm_connector.disallow_edp_enter_psr and the include of
  amdgpu_dm_replay.h (both introduced upstream by commits not present
  here). Dropped the two now-nonexistent disallow_edp_enter_psr
  guards (matching this tree's pre-existing PSR-enable behavior,
  which never had that guard either), added the missing
  amdgpu_dm_replay.h include, and called this tree's existing replay
  setup function amdgpu_dm_setup_replay() instead of the
  amdgpu_dm_link_setup_replay() name used upstream. ]

Stable-dep-of: 261e0fe4e2c9 ("drm/amd/display: Resize MST HDCP per-connector arrays to 32")
Signed-off-by: Sasha Levin <sashal@kernel.org>